Torches now will go out
fixed environmine torches

--- a/config/enviromine/profiles/default/default_Settings.cfg
+++ b/config/enviromine/profiles/default/default_Settings.cfg
@@ -54,7 +54,7 @@ general {
     B:"Enable Physics Landslide"=true
     B:"Enable food spoiling"=true
     B:"Enable villager assistance"=true
-    B:"Torches burn"=true
+    B:"Torches burn"=false
     B:"Torches go out"=true
 
     # Track enviromine properties on Non-player entities(mobs & animals)
