RECIPES and GIT IGNORE UPDATE
I added and removed lots of recipes.
I ignored and discarded files to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,101 @@
 logs/2015-09-07-1.log.gz
 logs/2015-09-07-2.log.gz
 saves/NEI/client.dat
+asm/ccl_modular/aaf.txt
+asm/ccl_modular/aaf.txt
+usernamecache.json
+asm/ccl_modular/aaf.txt
+asm/ccl_modular/agq.txt
+asm/ccl_modular/aji.txt
+asm/ccl_modular/alb.txt
+asm/ccl_modular/ama.txt
+asm/ccl_modular/bex.txt
+asm/ccl_modular/bfl.txt
+asm/ccl_modular/bny.txt
+asm/ccl_modular/codechicken#nei#guihook#DefaultSlotClickHandler.txt
+asm/ccl_modular/codechicken#nei#guihook#GuiContainerManager.txt
+asm/ccl_modular/dh.txt
+asm/ccl_modular/dq.txt
+config/CustomOreGen/CustomOreGen_Config_Default.xml
+config/CustomOreGen/modules/default/AppliedEnergistics.xml
+config/CustomOreGen/modules/default/ArsMagicka2.xml
+config/CustomOreGen/modules/default/BiomesOPlenty.xml
+config/CustomOreGen/modules/default/Chisel2.xml
+config/CustomOreGen/modules/default/Dartcraft.xml
+config/CustomOreGen/modules/default/DenseOres.xml
+config/CustomOreGen/modules/default/ElectriCraft.xml
+config/CustomOreGen/modules/default/ExtraCaves.xml
+config/CustomOreGen/modules/default/Factorization.xml
+config/CustomOreGen/modules/default/Forestry.xml
+config/CustomOreGen/modules/default/FossilsandArchaeology.xml
+config/CustomOreGen/modules/default/Galacticraft.xml
+config/CustomOreGen/modules/default/Gregtech.xml
+config/CustomOreGen/modules/default/Gregtech6.xml
+config/CustomOreGen/modules/default/IndustrialCraft2.xml
+config/CustomOreGen/modules/default/Mekanism.xml
+config/CustomOreGen/modules/default/Metallurgy4.xml
+config/CustomOreGen/modules/default/MineChem.xml
+config/CustomOreGen/modules/default/MinecraftComesAlive.xml
+config/CustomOreGen/modules/default/NetherOres.xml
+config/CustomOreGen/modules/default/Netherrocks.xml
+config/CustomOreGen/modules/default/PamsHarvestCraft.xml
+config/CustomOreGen/modules/default/ProjectRed.xml
+config/CustomOreGen/modules/default/RailCraft.xml
+config/CustomOreGen/modules/default/ReactorCraft.xml
+config/CustomOreGen/modules/default/SimpleOres.xml
+config/CustomOreGen/modules/default/Steamcraft.xml
+config/CustomOreGen/modules/default/Thaumcraft4.xml
+config/CustomOreGen/modules/default/ThermalFoundation.xml
+config/CustomOreGen/modules/default/TinkersConstruct.xml
+config/CustomOreGen/modules/default/VanillaMinecraft.xml
+config/DynamicLights_onFire.cfg
+config/splash.properties
+logs/fml-client-1.log
+logs/fml-client-2.log
+logs/fml-client-3.log
+logs/fml-client-latest.log
+logs/fml-junk-earlystartup.log
+logs/latest.log
+minetweaker.log
+mods/carpentersblocks/CarpentersBlocksCachedResources.zip
+options.txt
+saves/NEI/local/New World/NEI.cfg
+saves/NEI/local/New World/NEI.dat
+saves/New World/cofh/EnderFrequencies.cfg
+saves/New World/CustomOreGen_Options.txt
+saves/New World/data/EM_WorldData.dat
+saves/New World/data/EnviroCaveData
+saves/New World/data/EnviroEarthquakes
+saves/New World/data/EnviroMineshafts
+saves/New World/data/ImmersiveEngineering-SaveData.dat
+saves/New World/data/villages.dat
+saves/New World/DIM-1/CustomOreGen_Options.txt
+saves/New World/DIM-1/data/villages.dat
+saves/New World/DIM-1/forcedchunks.dat
+saves/New World/DIM-1/multipart.dat
+saves/New World/DIM-2/CustomOreGen_Options.txt
+saves/New World/DIM-2/data/villages.dat
+saves/New World/DIM-2/forcedchunks.dat
+saves/New World/DIM-2/multipart.dat
+saves/New World/DIM0/CustomOreGen_Options.txt
+saves/New World/DIM1/CustomOreGen_Options.txt
+saves/New World/DIM1/data/villages.dat
+saves/New World/DIM1/forcedchunks.dat
+saves/New World/DIM1/multipart.dat
+saves/New World/forcedchunks.dat
+saves/New World/level.dat
+saves/New World/level.dat_mcr
+saves/New World/level.dat_old
+saves/New World/multipart.dat
+saves/New World/NEI/banneditems.cfg
+saves/New World/NEI/players/karl1024.dat
+saves/New World/NEI/server.cfg
+saves/New World/playerdata/42f8b5a9-6ad5-4151-9df8-14bd689fd762.dat
+saves/New World/region/r.-1.-1.mca
+saves/New World/region/r.-1.-2.mca
+saves/New World/region/r.-1.0.mca
+saves/New World/region/r.0.-1.mca
+saves/New World/region/r.0.-2.mca
+saves/New World/region/r.0.0.mca
+saves/New World/session.lock
+saves/New World/stats/42f8b5a9-6ad5-4151-9df8-14bd689fd762.json
