Added Git Ignore Files

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,4 @@ saves/New World/region/r.0.-2.mca
 saves/New World/region/r.0.0.mca
 saves/New World/session.lock
 saves/New World/stats/42f8b5a9-6ad5-4151-9df8-14bd689fd762.json
+config/Quadrum/item/textures/Thumbs.db
