--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 logs/2015-09-07-1.log.gz
+logs/
 logs/2015-09-07-2.log.gz
 saves/NEI/client.dat
+saves/
+asm/
+asm
 asm/ccl_modular/aaf.txt
 asm/ccl_modular/aaf.txt
 usernamecache.json
@@ -56,9 +60,12 @@ logs/fml-client-3.log
 logs/fml-client-latest.log
 logs/fml-junk-earlystartup.log
 logs/latest.log
+logs/
+logs
 minetweaker.log
 mods/carpentersblocks/CarpentersBlocksCachedResources.zip
 options.txt
+saves
 saves/NEI/local/New World/NEI.cfg
 saves/NEI/local/New World/NEI.dat
 saves/New World/cofh/EnderFrequencies.cfg
