--- a/config/IguanaTweaks/main.cfg
+++ b/config/IguanaTweaks/main.cfg
@@ -148,7 +148,7 @@ movementrestriction {
     I:terrainSlowdownInSnow=20
 
     # Percentage of slowdown when walking on dirt or grass (Set 0 to disable)
-    I:terrainSlowdownOnDirt=10
+    I:terrainSlowdownOnDirt=0
 
     # Percentage of slowdown when walking on ice (Set 0 to disable)
     I:terrainSlowdownOnIce=20
