--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 logs/2015-09-07-1.log.gz
-logs/
+logs/**
 logs/2015-09-07-2.log.gz
 saves/NEI/client.dat
-saves/
-asm/
+saves/**
+asm/**
 asm
 asm/ccl_modular/aaf.txt
 asm/ccl_modular/aaf.txt
@@ -60,7 +60,7 @@ logs/fml-client-3.log
 logs/fml-client-latest.log
 logs/fml-junk-earlystartup.log
 logs/latest.log
-logs/
+logs/**
 logs
 minetweaker.log
 mods/carpentersblocks/CarpentersBlocksCachedResources.zip
