--- a/config/enviromine/profiles/default/default_Settings.cfg
+++ b/config/enviromine/profiles/default/default_Settings.cfg
@@ -52,7 +52,7 @@ general {
     # Turn physics On/Off
     B:"Enable Physics"=true
     B:"Enable Physics Landslide"=true
-    B:"Enable food spoiling"=true
+    B:"Enable food spoiling"=false
     B:"Enable villager assistance"=true
     B:"Torches burn"=false
     B:"Torches go out"=true
