Attempt Fix planting Aquatic, added frames
Attempt Fix planting Aquatic, added frames

--- a/config/HungerOverhaul/HungerOverhaul.cfg
+++ b/config/HungerOverhaul/HungerOverhaul.cfg
@@ -203,7 +203,7 @@ harvestcraft {
     I:chestLootMaxStackSize=16
 
     # Makes HarvestCraft foods unplantable, meaning seeds are required to plant crops [vanilla: false] [default: true]
-    B:foodsUnplantable=true
+    B:foodsUnplantable=false
 }
 
 
