Windmill nerf, multipart addon, finder compas update
Windmill nerf, multipart addon, finder compas update

--- a/config/FinderCompass.cfg
+++ b/config/FinderCompass.cfg
@@ -122,4 +122,14 @@ NoEnderEyeNeedle
 redstone_ore:255:125:155:200:70:10:100:0
 //
 //
+Setting:Saltpeter
+NoEnderEyeNeedle
+// - Saltpeter
+Railcraft:ore:179:179:179:200:70:10:100:0:1
+//
+Setting:Sulfur
+NoEnderEyeNeedle
+// - Sulfur
+Railcraft:ore:51:26:0:200:70:10:100:0:0
+//
 //
