--- a/config/microblocks.cfg
+++ b/config/microblocks.cfg
@@ -3,3 +3,136 @@
 #<name> is the unlocalised name or registry key of the block/item enclosed in quotes. NEI can help you find these
 #<meta> may be ommitted, in which case it defaults to 0, otherwise it can be a number, a comma separated list of numbers, or a dash separated range
 #Ex. "dirt" "minecraft:planks":3 "iron_ore":1,2,3,5 "ThermalFoundation:Storage":0-15
+
+
+
+
+
+"PaintEverything:BlackStone"
+"PaintEverything:RedStone"
+"PaintEverything:GreenStone"
+"PaintEverything:BrownStone"
+"PaintEverything:BlueStone"
+"PaintEverything:PurpleStone"
+"PaintEverything:CyanStone"
+"PaintEverything:GrayStone"
+"PaintEverything:PinkStone"
+"PaintEverything:LimeStone"
+"PaintEverything:YellowStone"
+"PaintEverything:OrangeStone"
+"PaintEverything:WhiteStone"
+"PaintEverything:LightGrayStone"
+"PaintEverything:LightBlueStone"
+
+
+"PaintEverything:BlackStoneBrick"
+"PaintEverything:RedStoneBrick"
+"PaintEverything:GreenStoneBrick"
+"PaintEverything:BrownStoneBrick"
+"PaintEverything:BlueStoneBrick"
+"PaintEverything:PurpleStoneBrick"
+"PaintEverything:CyanStoneBrick"
+"PaintEverything:GrayStoneBrick"
+"PaintEverything:PinkStoneBrick"
+"PaintEverything:LimeStoneBrick"
+"PaintEverything:YellowStoneBrick"
+"PaintEverything:OrangeStoneBrick"
+"PaintEverything:WhiteStoneBrick"
+"PaintEverything:LightGrayStoneBrick"
+"PaintEverything:LightBlueStoneBrick"
+
+"PaintEverything:BlackCobblestone"
+"PaintEverything:RedCobblestone"
+"PaintEverything:GreenCobblestone"
+"PaintEverything:BrownCobblestone"
+"PaintEverything:BlueCobblestone"
+"PaintEverything:PurpleCobblestone"
+"PaintEverything:CyanCobblestone"
+"PaintEverything:GrayCobblestone"
+"PaintEverything:PinkCobblestone"
+"PaintEverything:LimeCobblestone"
+"PaintEverything:YellowCobblestone"
+"PaintEverything:OrangeCobblestone"
+"PaintEverything:WhiteCobblestone"
+"PaintEverything:LightGrayCobblestone"
+"PaintEverything:LightBlueCobblestone"
+
+"PaintEverything:BlackDirt"
+"PaintEverything:RedDirt"
+"PaintEverything:GreenDirt"
+"PaintEverything:BrownDirt"
+"PaintEverything:BlueDirt"
+"PaintEverything:PurpleDirt"
+"PaintEverything:CyanDirt"
+"PaintEverything:GrayDirt"
+"PaintEverything:PinkDirt"
+"PaintEverything:LimeDirt"
+"PaintEverything:YellowDirt"
+"PaintEverything:OrangeDirt"
+"PaintEverything:WhiteDirt"
+"PaintEverything:LightGrayDirt"
+"PaintEverything:LightBlueDirt"
+
+"PaintEverything:BlackBrick"
+"PaintEverything:RedBrick"
+"PaintEverything:GreenBrick"
+"PaintEverything:BrownBrick"
+"PaintEverything:BlueBrick"
+"PaintEverything:PurpleBrick"
+"PaintEverything:CyanBrick"
+"PaintEverything:GrayBrick"
+"PaintEverything:PinkBrick"
+"PaintEverything:LimeBrick"
+"PaintEverything:YellowBrick"
+"PaintEverything:OrangeBrick"
+"PaintEverything:WhiteBrick"
+"PaintEverything:LightGrayBrick"
+"PaintEverything:LightBlueBrick"
+
+"PaintEverything:BlackSand"
+"PaintEverything:RedSand"
+"PaintEverything:GreenSand"
+"PaintEverything:BrownSand"
+"PaintEverything:BlueSand"
+"PaintEverything:PurpleSand"
+"PaintEverything:CyanSand"
+"PaintEverything:GraySand"
+"PaintEverything:PinkSand"
+"PaintEverything:LimeSand"
+"PaintEverything:YellowSand"
+"PaintEverything:OrangeSand"
+"PaintEverything:WhiteSand"
+"PaintEverything:LightGraySand"
+"PaintEverything:LightBlueSand"
+
+"PaintEverything:BlackSandStone"
+"PaintEverything:RedSandStone"
+"PaintEverything:GreenSandStone"
+"PaintEverything:BrownSandStone"
+"PaintEverything:BlueSandStone"
+"PaintEverything:PurpleSandStone"
+"PaintEverything:CyanSandStone"
+"PaintEverything:GraySandStone"
+"PaintEverything:PinkSandStone"
+"PaintEverything:LimeSandStone"
+"PaintEverything:YellowSandStone"
+"PaintEverything:OrangeSandStone"
+"PaintEverything:WhiteSandStone"
+"PaintEverything:LightGraySandStone"
+"PaintEverything:LightBlueSandStone"
+
+"PaintEverything:BlackWoodPlanks"
+"PaintEverything:RedWoodPlanks"
+"PaintEverything:GreenWoodPlanks"
+"PaintEverything:BrownWoodPlanks"
+"PaintEverything:BlueWoodPlanks"
+"PaintEverything:PurpleWoodPlanks"
+"PaintEverything:CyanWoodPlanks"
+"PaintEverything:GrayWoodPlanks"
+"PaintEverything:PinkWoodPlanks"
+"PaintEverything:LimeWoodPlanks"
+"PaintEverything:YellowWoodPlanks"
+"PaintEverything:OrangeWoodPlanks"
+"PaintEverything:WhiteWoodPlanks"
+"PaintEverything:LightGrayWoodPlanks"
+"PaintEverything:LightBlueWoodPlanks"
