--- a/config/cofh/thermalexpansion/common.cfg
+++ b/config/cofh/thermalexpansion/common.cfg
@@ -126,7 +126,7 @@ Dynamo {
 Ender {
 
     Tesseract {
-        B:Recipe.Enable=true
+        B:Recipe.Enable=false
 
         # If FALSE, disables the Tesseract Frames recipes, if Tesseracts are ALSO disabled.
         B:Recipe.Frame=true
